# hello-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  _0_config.sh  _1_build.sh  _2_test.sh  _3_check.sh  _4_publish.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
include/: publisher.h
publish/coverage/: coverage.info
publish/coverage/report/: index-sort-f.html  index-sort-l.html  index.html
publish/coverage/report/src/: index-sort-f.html  index-sort-l.html  index.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html  publisher.c.func-sort-c.html  publisher.c.func.html  publisher.c.gcov.html
publish/coverage/report/test/: index-sort-f.html  index-sort-l.html  index.html  test_publisher.c.func-sort-c.html  test_publisher.c.func.html  test_publisher.c.gcov.html
src/: CMakeLists.txt  main.c  publisher.c
test/: CMakeLists.txt  test_publisher.c
